# aarwyn-ink

./: Cargo.toml
metadata/: vectest.contract
src/: main.rs
